code-test/HandleString/Deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # 使用 nginx ingress controller
  rules:
    - host: handlestring.local  # ← 你的域名，可以是自定义的本地域名或公网域名
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: handlestring-service
                port:
                  number: 8080
